[metadata]
name = akita_flask
version = attr: akita_flask.__version__
url = https://github.com/akitasoftware/akita-flask
author = Cole Schlesinger
author_email = cole@akitasoftware.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
description = Utilities for connecting Akita to Django
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    akita-har
    flask
packages = find:
python_requires = >=3.6
